--- a/config/config.example.env
+++ b/config/config.example.env
@@ -4,3 +4,5 @@ MONGODB_PORT=27017  # MongoDB port
 MONGO_EXPRESS_PORT=8081  # Mongo Express port
 MONGO_EXPRESS_USERNAME=username  # Mongo Express username
 MONGO_EXPRESS_PASSWORD=password  # Mongo Express password
+mv config/config.example.yml config/config.yml
+mv config/config.example.env config/config.env
